--- a/partII.html
+++ b/partII.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            Basic II
-        </title>
+        <title>Basic II</title>
     </head>
     <body>
         <table> 
@@ -24,14 +22,12 @@
                 </tr>
             </tbody>
         </table>
-        <h1>
-            Here is a list of my favorite things:
-        </h1>
-            <ul>
-                <li>Food</li>
-                <li>Bandwidth</li>
-                <li>Coffee</li>
-                <li>Beach</li>
-            </ul>
+        <h1>Here is a list of my favorite things:</h1>
+        <ul>
+            <li>Food</li>
+            <li>Bandwidth</li>
+            <li>Coffee</li>
+            <li>Beach</li>
+        </ul>
     </body>
 </html>
